--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>My Github Page</title>
+    <title>Prof Pacheco's JNL 221 Web Site</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
@@ -42,13 +42,17 @@
         <!-- ........................ -->
 
 
-        <h1>NAME'S Page</h1>
+        <h1>Hey! Welcome to my site.</h1>
 
         <p>
-          About this page text. Change me!
+          Dan Pacheco holds the Peter A. Horvitz Chair of Journalism Innovation at the Newhouse School and is a pioneer in the use of virtual reality for journalism. In 2014 he started and co-produced The Des Moines Register’s Harvest of Change VR project for the Oculus Rift, the world’s first large-scale use of virtual reality by a commercial news organization. Harvest of Change earned an Edward R. Murrow Award in 2015 for its innovative use of 360-degree video for virtual reality.
+
+Previously, Pacheco spent 20 years in the trenches of digital publishing everywhere from Fortune 500 companies to startups. He started his career as an online producer for Washingtonpost.com, where he produced Interact, one of the first online news communities. Subsequently, as a principal product manager at America Online, he oversaw some of the internet’s first truly global community products. In 2005, after pioneering the first implementation of a social networking platform at a U.S. newspaper, he received an NAA “20 Under 40” award. And in 2007, he received a Knight News Challenge grant to build a democratized publishing service that evolved into an eBook platform.
+
+When he’s not teaching, Pacheco is busy exploring new technologies shaping the future of media, which lately means augmented and mixed reality, social VR, chatbots and smart speaker skills.
         </p>
 
-        <img src="https://upload.wikimedia.org/wikipedia/en/c/cd/Otto_the_orange.png"/>
+        <img src="https://twitter.com/pachecod/photo"/>
         
 
         <!-- ........................ -->
