--- a/jnl8/index.html
+++ b/jnl8/index.html
@@ -4,12 +4,19 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="main.css">
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+<font><link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap" rel="stylesheet"></font>
+
 	<title>Rising Water Levels Mean Cities are Rising to the occassion</title>
 </head>
 <body>
 	<header>HTML/CSS Assignment #1<br>Source: <a https://www.cnn.com/2023/03/26/world/flooding-cities-water-design-climate-intl/index.html> </a></header>
 	<div class="mainimg">
-		<img src="JNL photo 1.webpb">
+		<img src="https://upload.wikimedia.org/wikipedia/commons/7/76/Images_at_Freedom_Park_09.jpg">
 		<p class="caption" Courtesy Panoramic Studio/LANDPROCESS 
 		The park is designed to work with water, not against it.>
 	</p></div>
@@ -50,5 +57,9 @@ A network of paths connects the park, which is full of plants and trees, includi
 As sponge cities proliferate in China, there have been some questions about their ability to cope with heavier rains and storms, made more severe by climate change. In 2021, the city of Zhengzhou, in Henan province, which is part of the sponge city initiative, experienced devastating rains that killed almost 300 people.
 
 But for Yu, sponge cities offer a necessary correction to the mistakes that have been made as cities grow, including damaging and destroying rivers and wetlands and heavy reliance on concrete.
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+</body>
 
 </html>
