--- a/jnlasn10/index10.html
+++ b/jnlasn10/index10.html
@@ -11,7 +11,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Navigate</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,10 +28,10 @@
             Dropdown
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Image 1</a></li>
+            <li><a class="dropdown-item" href="#">Chart</a></li>
          	   <li><hr class="dropdown-divider"></li>
-         	   <li><a class="dropdown-item" href="#">Something else here</a></li>
+         	   <li><a class="dropdown-item" href="#">Image 2</a></li>
         	  </ul>
        	 </li>
        	 <li class="nav-item">
@@ -47,7 +47,7 @@
 	</nav>
 
 	<header>
-		<h1>The Premier League Table; The Truth:</h1>
+		<h1>Cities and Flooding:</h1>
 	</header>
 
 	<main>
@@ -76,7 +76,7 @@
 		</section>
 
 		<section>
-			<img src="https://upload.wikimedia.org/wikipedia/commons/7/76/Images_at_Freedom_Park_09.jpg" class="object-fit-scale border rounded">
+			<img src="https://upload.wikimedia.org/wikipedia/commons/7/76/Images_at_Freedom_Park_09.jpg" class="object-fit-scale" class="container-fluid" class="rounded float-start">
 		</section>
 
 		<section>
