--- a/jnlFinal/index.html
+++ b/jnlFinal/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -22,18 +21,18 @@
 		<p class="caption" Courtesy Panoramic Studio/LANDPROCESS 
 		The park is designed to work with water, not against it.>
 	</p></div>
-		<h1>DObsesity and Diabetes have been casuing havoc in America for decades, But why? </h1>
+		<h1>Obsesity and Diabetes have been casuing havoc in America for decades, But why? </h1>
 		<h2>By Eric McCormick
 
 </h2>
-<p><strong>Placeholder text</strong></p>
+
 
 <div class="otherimg">
 		<img src="https://upload.wikimedia.org/wikipedia/commons/6/68/In-N-Out_Burger_cheeseburgers.jpg">
 		<p class="caption" Jef Poskanzer from Berkeley, California, USA, CC BY 2.0 https://creativecommons.org/licenses/by/2.0>
 	</p></div>
 
-The obesity epidemic first began in the US around 1980 and has only become even more threatening of an issue facing Americans since then. The epidemic has roots in a wide variety of American culture, including exercise, work life, and economic factors, however it is easily tracked to the change in American diet that began at this time and has stayed in place ever since. This change meant that Americans were consuming more ultra-processed foods (UPFs) than ever before.  UPF’s are essentially foods that are filled with fats, sugars, salts, and have a high calorie content. But why did the American diet change? This largely has to do with the continual movement towards a more consumer branded lifestyle in the USA which began in the 1950’s, the mass implementation of snacks such as candy bars and potato chips, as well as the move to fast food restaurants and easy-made-meals is now reaping its effects on the country, but it was hitting harder in some places than others.
+   The obesity epidemic first began in the US around 1980 and has only become even more threatening of an issue facing Americans since then. The epidemic has roots in a wide variety of American culture, including exercise, work life, and economic factors, however it is easily tracked to the change in American diet that began at this time and has stayed in place ever since. This change meant that Americans were consuming more ultra-processed foods (UPFs) than ever before.  UPF’s are essentially foods that are filled with fats, sugars, salts, and have a high calorie content. But why did the American diet change? This largely has to do with the continual movement towards a more consumer branded lifestyle in the USA which began in the 1950’s, the mass implementation of snacks such as candy bars and potato chips, as well as the move to fast food restaurants and easy-made-meals is now reaping its effects on the country, but it was hitting harder in some places than others.
 
 	<iframe title="US States with Highest Percentage of 18+ Diabetes cases (Diagnosed)" aria-label="Range Plot" id="datawrapper-chart-d4Hcp" src="https://datawrapper.dwcdn.net/d4Hcp/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="420" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 	</script>
