--- a/jnlFinal/index.html
+++ b/jnlFinal/index.html
@@ -15,13 +15,9 @@
 	<title>JNL Final Project EM</title>
 </head>
 <body>
-	<header>Diabetes Presence In the USA</header>
-	<div class="mainimg">
-		<img src="https://upload.wikimedia.org/wikipedia/commons/7/76/Images_at_Freedom_Park_09.jpg">
-		<p class="caption" Courtesy Panoramic Studio/LANDPROCESS 
-		The park is designed to work with water, not against it.>
-	</p></div>
-		<h1>Obsesity and Diabetes have been casuing havoc in America for decades, But why? </h1>
+	<header>Eric McCormick JNL 221 Final</header>
+	
+		<h1><strong>Obsesity and Diabetes have been casuing havoc in America for decades, But why?</strong> </h1>
 		<h2>By Eric McCormick
 
 </h2>
