--- a/jnlFinal/index.html
+++ b/jnlFinal/index.html
@@ -40,6 +40,8 @@ Looking at this chart, we can see the 15 US states with the highest percentage o
 	</script>
 
 This bar graph shows the number of McDonald's restaurants, one of America's most popular fast food restaurants, per 100,000 in the state's population. Now when the two charts are analyzed together, we can see that 7/15 of the states with the highest percentage of diagnosed diabetes cases, also had the most McDonald’s restaurants per 100,000 people in the population. Places like McDonalds sell more UPFs than other restaurants and stores, and McDonalds employee Cade Cahoon doubled down on that. Cahoon seemingly believes that the food sold by McDonalds and its fellow fast food establishments is a major cause of obesity, not just around the US, but even in the customers he himself serves, “I, personally, don’t even eat the food we serve. After having cooked and been around here, I just see what it does to the people who eat it everyday”. Cahoon also mentioned the presence of things such as oils, butter, and other foods with high fat, sugar, and calorie content. Given the presence of these ingredients, all key parts of UPFs,  it is easy to see why many states that have more McDonalds, also have higher diabetes diagnose rates. 
+
+	<br> Data from Wall Street Journal and Data.gov.
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </body>
